# qbitel-qrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.work
.claude/: launch.json
api/: Dockerfile  go.mod
api/cmd/migrate/: main.go
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/handler/: assessment.go  finding.go  health.go  organization.go
api/internal/model/: assessment.go  finding.go  organization.go
api/internal/repository/: assessment_repo.go  finding_repo.go  organization_repo.go
api/internal/service/: assessment_service.go  finding_service.go  organization_service.go
db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
infra/docker/: docker-compose.deps.yml  docker-compose.yml
ml/: Dockerfile  pyproject.toml
ml/src/qrap_ml/: __init__.py
ml/src/qrap_ml/api/: app.py
ml/src/qrap_ml/hndl_calculator/: __init__.py  calculator.py
ml/src/qrap_ml/migration_planner/: __init__.py  planner.py
ml/src/qrap_ml/risk_scorer/: __init__.py  scorer.py
ml/tests/: test_hndl_calculator.py  test_migration_planner.py  test_risk_scorer.py
shared/go/: go.mod
shared/go/database/: pool.go
shared/go/middleware/: auth.go  auth_test.go  ratelimit.go  security.go
web/: Dockerfile  index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/pages/: AssessmentsPage.tsx  DashboardPage.tsx  FindingsPage.tsx  HndlPage.tsx
website/: astro.config.mjs  package-lock.json  package.json
website/src/pages/: index.astro
(+12 files in other folders)
